Feat: 주차장, 충전소  탐색 기 본값 수정 , 주차장조회에서 주차장,충전소 조회로 기능 전환
- ev_charger 기본값 설정: 버튼 클릭 시 주차장/충전소 리스트 기본 출력
- 주차장,충전소 정보 조회 중 주차장과 충전소 구분하는 변수 추가
Resolves: #2,#3
